@@ -1,0 +1,15 @@
+query: SELECT pmod(null, null)
+FROM src LIMIT 1
+Input: default/src
+Output: file:/mnt/vol/devrs001.snc1/schen/hive-trunk/build/ql/tmp/770960285/10000
+NULL
+query: SELECT pmod(-100,9), pmod(-50,101), pmod(-1000,29)
+FROM src LIMIT 1
+Input: default/src
+Output: file:/mnt/vol/devrs001.snc1/schen/hive-trunk/build/ql/tmp/1004944279/10000
+8	51	15
+query: SELECT pmod(100,19), pmod(50,125), pmod(300,15)
+FROM src LIMIT 1
+Input: default/src
+Output: file:/mnt/vol/devrs001.snc1/schen/hive-trunk/build/ql/tmp/1063528154/10000
+5	50	0
